book-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
